# karva

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  Makefile  README.md  SECURITY.md  STYLE.md  cobertura.xml  dist-workspace.toml  fixture-normalization-plan.md  index.html  justfile  lcov.info  mkdocs.yml  new.txt  out.txt  package-lock.json  pyproject.toml  seal.toml  search.json  sitemap.xml  zensical.toml
crates/karva/: Cargo.toml
crates/karva/src/: args.rs  lib.rs  logging.rs  main.rs  watch.rs
crates/karva/src/commands/: mod.rs  show_config.rs  usage.rs  version.rs
crates/karva/tests/: tags.rs
crates/karva/tests/it/: basic.rs  cache.rs  cancel.rs  coverage.rs  durations.rs  filterset.rs  junit.rs  last_failed.rs  main.rs  name_filter.rs  partition.rs  result_report.rs  run_ignored.rs  run_timeout.rs  show_config.rs  usage.rs
crates/karva_benchmark/: Cargo.toml  README.md
crates/karva_benchmark/benches/: affect_walltime.rs  karva.rs  karva_benchmark_walltime.rs  karva_walltime.rs  pydantic_settings_walltime.rs  pydantic_walltime.rs  sqlmodel_walltime.rs  typer_walltime.rs
crates/karva_benchmark/resources/: .gitignore  generate.py  test_large_list_comprehension.py  test_large_summation.py  test_math.py  test_string_concatenation.py  test_true_assertions.py
crates/karva_benchmark/src/: criterion.rs  lib.rs  main.rs  real_world_projects.rs  walltime.rs
crates/karva_cache/: Cargo.toml
crates/karva_cache/src/: artifact.rs  cache.rs  diagnostics.rs  hash.rs  lib.rs  models.rs  reader.rs  writer.rs
crates/karva_cli/: Cargo.toml
crates/karva_cli/src/: args.rs  enums.rs  exit_status.rs  filter.rs  lib.rs  logging.rs  partition.rs  printer.rs  show_config.rs  test.rs  verbosity.rs  version.rs
crates/karva_cli/tests/: cli.rs
crates/karva_cli/tests/integration/: basic.rs  mod.rs
crates/karva_collector/: Cargo.toml
crates/karva_collector/src/: lib.rs  models.rs
crates/karva_combine/: Cargo.toml
crates/karva_combine/src/: lib.rs
crates/karva_core/: Cargo.toml
crates/karva_core/src/: case.rs  cli.rs  collection.rs  context.rs  diagnostic.rs  diagnostics.rs  discoverer.rs  executor.rs  file_resolver.rs  lib.rs  location.rs  main.rs  module.rs  name.rs  package.rs  path.rs  printer.rs  project.rs  python.rs  runner.rs  session.rs  test_result.rs  testing.rs  utils.rs
crates/karva_core/src/collection/: collector.rs  mod.rs  models.rs
crates/karva_core/src/collector/: diagnostic.rs  mod.rs
crates/karva_core/src/db/: path.rs
crates/karva_core/src/diagnostic/: diagnostic.rs  metadata.rs  mod.rs  render.rs  reporter.rs  result.rs  sub_diagnostic.rs  traceback.rs  utils.rs
crates/karva_core/src/discovery/: case.rs  discoverer.rs  mod.rs  visitor.rs
crates/karva_core/src/fixture/: discoverer.rs  extractor.rs  finalizer.rs  manager.rs  mod.rs  python.rs  visitor.rs
crates/karva_core/src/models/: mod.rs  module.rs  package.rs  test_case.rs  test_function.rs
crates/karva_core/src/normalize/: mod.rs  utils.rs
crates/karva_core/src/runner/: case.rs  diagnostic.rs  finalizer_cache.rs  fixture_cache.rs  fixture_resolver.rs  mod.rs  package_runner.rs
crates/karva_core/src/tag/: mod.rs  python.rs
crates/karva_core/tests/: integration.rs
crates/karva_core/tests/common/: mod.rs
crates/karva_core/tests/integration/: basic.rs
crates/karva_dev/: Cargo.toml
crates/karva_dev/src/: generate_cli_reference.rs  generate_env_vars.rs  generate_options.rs  main.rs
crates/karva_diagnostic/: Cargo.toml
crates/karva_diagnostic/src/: lib.rs  reporter.rs  result.rs  traceback.rs
crates/karva_diagnostic/src/result/: case.rs  kind.rs  mod.rs  output.rs  stats.rs
crates/karva_diff/: Cargo.toml  README.md
crates/karva_diff/src/: main.rs
crates/karva_diffs/: Cargo.toml  README.md
crates/karva_diffs/src/: lib.rs
crates/karva_metadata/: Cargo.toml
crates/karva_metadata/src/: filter.rs  lib.rs  options.rs  pyproject.rs  settings.rs
crates/karva_metadata/src/options/: config.rs  mod.rs
crates/karva_project/: Cargo.toml
crates/karva_project/src/: db.rs  lib.rs  metadata.rs  path.rs  project.rs  system.rs  testing.rs  tests.rs  utils.rs  verbosity.rs  watch.rs
crates/karva_project/src/metadata/: configuration_file.rs  options.rs  pyproject.rs  settings.rs  value.rs
crates/karva_project/src/path/: mod.rs  python_test_path.rs  test_path.rs  utils.rs
crates/karva_project/src/system/: os.rs  walk_directory.rs
crates/karva_projects/: Cargo.toml
crates/karva_projects/src/: lib.rs  real_world_projects.rs
crates/karva_python/: Cargo.toml
crates/karva_python/src/: lib.rs
crates/karva_runner/: Cargo.toml
crates/karva_runner/src/: binary.rs  collection.rs  lib.rs  orchestration.rs  output.rs  partition.rs  shutdown.rs  worker_args.rs
crates/karva_snapshot/: Cargo.toml
crates/karva_snapshot/src/: cmd.rs  diff.rs  filters.rs  format.rs  inline.rs  lib.rs  review.rs  storage.rs
crates/karva_static/: Cargo.toml
crates/karva_static/src/: lib.rs
crates/karva_system/: Cargo.toml
crates/karva_system/src/: file_revision.rs  lib.rs
crates/karva_system/src/path/: test_path.rs
crates/karva_test_semantic/: Cargo.toml
crates/karva_test_semantic/src/: collection.rs  context.rs  diagnostic.rs  lib.rs  output_capture.rs  py_attach.rs  python.rs  utils.rs
crates/karva_test_semantic/src/diagnostic/: metadata.rs
crates/karva_test_semantic/src/discovery/: discoverer.rs  visitor.rs
crates/karva_test_semantic/src/runner/: finalizer_cache.rs  fixture_arguments.rs  fixture_cache.rs  fixture_resolver.rs  mod.rs  package_runner.rs  (+1 more)
crates/karva_tests/: Cargo.toml
crates/karva_tests/src/: lib.rs
crates/karva_verbosity/: Cargo.toml
crates/karva_verbosity/src/: lib.rs
crates/karva_version/: Cargo.toml
crates/karva_worker/: Cargo.toml
crates/karva_worker/src/: cli.rs
scripts/benchmark/: .gitignore  README.md  main.py  pyproject.toml
src/karva/: Cargo.toml  README.md
src/karva/src/: logging.rs
(+304 files in other folders)
