[build-system]
build-backend = "maturin"
requires = ["maturin>=1.9.3,<2.0"]

[project]
name = "karva"
version = "0.0.1-alpha.6"
description = "A Python test framework, written in Rust."
authors = [{ name = "Matthew Mckee", email = "matthewmckee04@yahoo.co.uk" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10,<3.15"
keywords = ["karva", "pytest", "rust", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
karva = "karva._karva:karva_run"
karva-worker = "karva._karva:karva_worker_run"

[dependency-groups]
dev = ["ruff", "ty"]
docs = ["zensical==0.0.45"]
release = ["tbump"]

[project.urls]
Changelog = "https://github.com/MatthewMckee4/karva/blob/main/CHANGELOG.md"
Documentation = "https://matthewmckee4.github.io/karva/"
Homepage = "https://matthewmckee4.github.io/karva/"
Issues = "https://github.com/MatthewMckee4/karva/issues"
Repository = "https://github.com/MatthewMckee4/karva"

[tool.maturin]
manifest-path = "crates/karva_python/Cargo.toml"
module-name = "karva._karva"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.ruff]
fix = true
target-version = "py311"

[tool.ruff.lint]
exclude = [
    "python/karva/__main__.py",
    "python/karva/_vendor/**/*.py",
    "crates/karva_benchmark/resources/test_*.py",
]
select = [
    "ARG",
    "B",
    "B9",
    "D",
    "E",
    "EXE",
    "F",
    "I",
    "ISC",
    "PGH",
    "PYI",
    "PT",
    "RUF",
    "SIM",
    "UP",
    "PLW0127",
    "FURB101",
    "FURB103",
    "PLW1510",
]
ignore = [
    # Unnecessarily strict/pedantic
    "D",
    # These are all enforced by, or incompatible with, the ruff formatter:
    "E203",
    "E501",
    "W291",
    "W293",
    # It's often necessary to compare types instead of using isinstance()
    "E721",
    "RUF005",
    # Let mypy/pyright complain about blanket type ignores or implicit optional
    "PGH004",
    "RUF013",
    # Makes code slower and more verbose
    # https://github.com/astral-sh/ruff/issues/7871
    "UP038",

    "S", "ANN401", "PYI021"
]
unfixable = [
    "F841",    # unused variable. ruff keeps the call, but mostly we want to get rid of it all
    "F601",    # automatic fix might obscure issue
    "F602",    # automatic fix might obscure issue
    "B018",    # automatic fix might obscure issue
    "PLW1510", # automatic fix might obscure issue
    "RUF017",  # Ruff's fix is faster, but I prefer using itertools.chain_from_iterable
]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["python"]
