[package]
name = "karva"
version = "0.0.0"
default-run = "karva"

edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[[bin]]
name = "karva"
path = "src/main.rs"

[dependencies]
karva_cli = { workspace = true }
karva_core = { workspace = true }
karva_project = { workspace = true }

anyhow = { workspace = true }
argfile = { workspace = true }
camino = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["wrap_help", "string", "env"] }
colored = { workspace = true }
ctrlc = { workspace = true }
ruff_db = { workspace = true }
tracing = { workspace = true, features = ["release_max_level_debug"] }
tracing-flame = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tracing-tree = { workspace = true }
wild = { workspace = true }

[dev-dependencies]
directories = { workspace = true }
dunce = { workspace = true }
insta = { workspace = true, features = ["filters"] }
insta-cmd = { workspace = true }
regex = { workspace = true }
rstest = { workspace = true }
ruff_python_trivia = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
