[package]
name = "karva_benchmark"
version = "0.0.0"
description = "Karva Benchmarks"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
codspeed-criterion-compat = { workspace = true }
divan = { workspace = true }
karva_cli = { workspace = true }
karva_core = { workspace = true }
karva_metadata = { workspace = true }
karva_project = { workspace = true }
karva_projects = { workspace = true }
karva_runner = { workspace = true }
karva_system = { workspace = true }

[[bench]]
name = "karva_benchmark_walltime"
harness = false

[lints]
workspace = true
