[package]
name = "karva_cache"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
karva_project = { workspace = true }
karva_diagnostic = { workspace = true }

anyhow = { workspace = true }
camino = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
tracing = { workspace = true }
ruff_db = { workspace = true }
ruff_text_size = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
