[package]
name = "karva_cache"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Cache directory layout, result serialization, and duration tracking for Karva."
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
karva_diagnostic = { workspace = true }

anyhow = { workspace = true }
camino = { workspace = true }
ruff_db = { workspace = true }
ruff_notebook = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
ruff_source_file = { workspace = true }
ruff_text_size = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
