[package]
name = "karva_collector"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
karva_metadata = { workspace = true }
karva_python_semantic = { workspace = true }
karva_system = { workspace = true }

camino = { workspace = true }
crossbeam-channel = { workspace = true }
ignore = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_python_parser = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
