[package]
name = "karva_collector"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
karva_python_semantic = { workspace = true }

camino = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_python_parser = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
