[package]
name = "karva_combine"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Result combination and summary output for Karva."
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ruff_python_ast = { workspace = true }

[lints]
workspace = true
