[package]
name = "karva_core"
version = "0.0.0"

edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[[bin]]
name = "karva-core"
path = "src/bin/main.rs"

[dependencies]
karva_project = { workspace = true }
karva_system = { workspace = true }
karva_metadata = { workspace = true }
karva_diagnostic = { workspace = true }
karva_python_semantic = { workspace = true }
karva_collector = { workspace = true }
karva_cache = { workspace = true }
karva_cli = { workspace = true }
karva_logging = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["wrap_help", "string", "env"] }
camino = { workspace = true }
colored = { workspace = true }
ignore = { workspace = true }
pyo3 = { workspace = true }
regex = { workspace = true }
ruff_db = { workspace = true }
ruff_macros = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_python_parser = { workspace = true }
ruff_source_file = { workspace = true }
ruff_text_size = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wild = { workspace = true }
argfile = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }
regex = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
