
[package]
name = "karva_diff"
version = "0.0.0"

edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
clap = { workspace = true }
camino = { workspace = true }
anyhow = { workspace = true }
karva_projects = { workspace = true }
tempfile = { workspace = true }
karva_project = { workspace = true }

[lints]
workspace = true
