
[package]
name = "karva_diff"
version = "0.0.0"

edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
karva_project = { workspace = true }
karva_projects = { workspace = true }
karva_system = { workspace = true }

anyhow = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
