[package]
name = "karva_diffs"
version = "0.0.0"
description = "Diagnostic diff tests for Karva on real-world projects"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[[bin]]
name = "karva-diagnostics"
path = "src/bin/karva-diagnostics.rs"

[dependencies]
karva_core = { workspace = true }
karva_project = { workspace = true }
karva_test = { workspace = true }

anyhow = { workspace = true }
ruff_python_ast = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = { workspace = true }

[lints]
workspace = true
