[package]
name = "karva_metadata"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
karva_combine = { workspace = true }
karva_system = { workspace = true }
karva_macros = { workspace = true }

ruff_db = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
ruff_python_ast = { workspace = true }
camino = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
ruff_options_metadata = { workspace = true }

[lints]
workspace = true
