[package]
name = "karva_project"
version = "0.0.0"

edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
karva_combine = { workspace = true }
karva_macros = { workspace = true }
karva_system = { workspace = true }
karva_metadata = { workspace = true }

anyhow = { workspace = true }
camino = { workspace = true }
etcetera = { workspace = true }
filetime = { workspace = true }
ruff_db = { workspace = true }
ruff_notebook = { workspace = true }
ruff_options_metadata = { workspace = true }
ruff_python_ast = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
