[package]
name = "karva_project"
version = "0.0.0"

edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
karva_metadata = { workspace = true }
karva_system = { workspace = true }

anyhow = { workspace = true }
camino = { workspace = true }
ruff_db = { workspace = true }
ruff_notebook = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
