[package]
name = "karva_project"
version = "0.0.0"

edition = { workspace = true }
rust-version = { workspace = true }
description = "Project metadata, test path resolution, and path utilities for Karva."
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
camino = { workspace = true }
fs-err = { workspace = true }
karva_metadata = { workspace = true }
karva_python_semantic = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
