[package]
name = "karva_projects"
version = "0.0.0"

edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
karva_system = { workspace = true }

anyhow = { workspace = true }
camino = { workspace = true }
ruff_python_ast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
