[package]
name = "karva_python"
version = "0.0.1-alpha.7"

edition = { workspace = true }
rust-version = { workspace = true }
description = "Python extension module and wheel bindings for Karva."
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
name = "karva_python"
crate-type = ["rlib", "cdylib"]

[dependencies]
karva = { workspace = true }
karva_test_semantic = { workspace = true }
karva_worker = { workspace = true }

pyo3 = { workspace = true }

[lints]
workspace = true
