[package]
name = "karva_runner"
version = "0.0.0"

edition = { workspace = true }
rust-version = { workspace = true }
description = "Worker orchestration, partitioning, and parallel collection for Karva."
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
karva_cache = { workspace = true }
karva_cli = { workspace = true }
karva_collector = { workspace = true }
karva_logging = { workspace = true }
karva_metadata = { workspace = true }
karva_project = { workspace = true }
karva_static = { workspace = true }
karva_version = { workspace = true }

anyhow = { workspace = true }
camino = { workspace = true }
colored = { workspace = true }
crossbeam-channel = { workspace = true }
ctrlc = { workspace = true }
fastrand = { workspace = true }
ignore = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }

[dev-dependencies]
ruff_python_ast = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
