[package]
name = "karva_snapshot"
version = "0.0.0"

edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
camino = { workspace = true }
colored = { workspace = true }
console = { workspace = true }
similar = { workspace = true }
terminal_size = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
