[package]
name = "karva_static"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
description = "Environment variable constants and parallelism helpers for Karva."
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]

[lints]
workspace = true
