[package]
name = "karva_system"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
karva_python_semantic = { workspace = true }

ruff_db = { workspace = true }
camino = { workspace = true }
filetime = { workspace = true }
tracing = { workspace = true }
etcetera = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
