[package]
name = "karva_test_semantic"
version = "0.0.0"

edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
karva_cache = { workspace = true }
karva_cli = { workspace = true }
karva_collector = { workspace = true }
karva_diagnostic = { workspace = true, features = ["traceback"] }
karva_logging = { workspace = true }
karva_metadata = { workspace = true }
karva_project = { workspace = true }
karva_python_semantic = { workspace = true }

anyhow = { workspace = true }
camino = { workspace = true }
pyo3 = { workspace = true }
regex = { workspace = true }
ruff_db = { workspace = true }
ruff_macros = { workspace = true }
ruff_notebook = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_python_parser = { workspace = true }
ruff_source_file = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }
regex = { workspace = true }

[lints]
workspace = true
