[package]
name = "karva_tests"
version = "0.0.0"
publish = false
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[lib]
name = "karva_tests"

[dependencies]
karva_project = { workspace = true }
tempfile = { workspace = true }

anyhow = { workspace = true }
