[package]
name = "karva_worker"
version = "0.0.0"

edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[[bin]]
name = "karva-worker"
path = "src/bin/main.rs"

[dependencies]
karva_cache = { workspace = true }
karva_cli = { workspace = true }
karva_diagnostic = { workspace = true }
karva_logging = { workspace = true }
karva_metadata = { workspace = true }
karva_project = { workspace = true }
karva_python_semantic = { workspace = true }
karva_static = { workspace = true }
karva_test_semantic = { workspace = true }

anyhow = { workspace = true }
argfile = { workspace = true }
camino = { workspace = true }
clap = { workspace = true, features = ["wrap_help", "string", "env"] }
colored = { workspace = true }
ruff_db = { workspace = true }
ruff_notebook = { workspace = true }
wild = { workspace = true }

[lints]
workspace = true
